fixed overlapping sag tag issue
it was preventing clicking on the top link
also cleanup unnecessary styles

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -33,14 +33,15 @@ body {
     background: rgba(0, 0, 0, 0.8);
 }
 
-.menu-button {
+.settings-svg {
     width: 48px;
+    height: 30px;
+}
+
+.menu-button {
     margin-top: 4px;
     margin-left: 7px;
-    vertical-align: top;
     position: absolute;
-    left: 0px;
-    top: 0px;
     z-index: 25;
 }
 
